--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nunjucks": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -16,6 +17,6 @@
     "nodemon": "^1.18.11"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   }
 }
