--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
-    "nunjucks": "^3.2.0"
+    "multer": "^1.4.1",
+    "nunjucks": "^3.2.0",
+    "pg": "^7.10.0",
+    "sequelize": "^5.7.6"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -14,7 +18,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "sequelize-cli": "^5.4.0"
   },
   "scripts": {
     "start": "nodemon src/index.js"
